kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: k8s.mimihome.ru
    http:
      paths:
      - backend:
          serviceName: simple-app
          servicePort: 80
